--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "cloudinary": "^1.21.0"
   }
 }
