--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,5 +1,5 @@
 PORT=3000
 mongoDb_url="mongodb+srv://aksa_17:aksa2002mongodb@cluster0.ihgxr.mongodb.net/Appoinmentdatabase?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=book_my_doc
-EMAIL_USER=aksassanthosh1705@gmail.com  # Your email address
+EMAIL_USER=aksassanthosh1705@gmail.com  
 EMAIL_PASS=tbgo lwbx kaui ntrz  # Your email password or app-specific password
