--- a/FRONTEND/bookmydoc/.env
+++ b/FRONTEND/bookmydoc/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL="https://bookmydoc-y330.onrender.com"
+VITE_API_BASE_URL="https://bookmydoc-y330.onrender.com"|| "http://localhost:3000";
